feat(report): 支持报告标题编辑和删除
